tests/ui/suggestions/use-placement-resolve.stderr
error[E0404]: cannot find trait `Debug` in this scope
  --> $DIR/use-placement-resolve.rs:11:14
   |
LL | fn foobar<T: Debug>(x: T) {}
   |              ^^^^^ not found in this scope
   |
   = note: a derive macro named `Debug` exists in another namespace
help: consider importing this trait instead
   |
LL + use std::fmt::Debug;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
